--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection":"Server=DOT-MANOJKUMAR-;Database=Mortgage-APP;User Id=sa; Password=pass@word1;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
