--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection":"Server=DOT-MANOJKUMAR-;Database=Mortgage-APP;User Id=sa; Password=pass@word1;"
   },
+  "AppSettings":{
+    "Token":"my top secret key"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
